--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ project(quadtree)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(quadtree main.cpp)
+add_executable(quadtree
+        Particle.h
+        QuadTree.h
+        Point.h
+        Rect.h
+        main.cpp
+        QuadTree.cpp
+        Particle.cpp)
